--- a/Course Portfolio/Proofs Portfolio/Final/Final Portfolio.tex
+++ b/Course Portfolio/Proofs Portfolio/Final/Final Portfolio.tex
@@ -114,7 +114,7 @@ Total:& \qquad\qquad\qquad(out of 15)\\
 
 
 
-\def\NAME{YOUR-NAME}%replace "YOUR-NAME" with your full name.
+\def\NAME{Christopher Hayduk}%replace "YOUR-NAME" with your full name.
 
 
 
